Correct display height on mobile

--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -42,7 +42,7 @@
   position: absolute;
   width: 100%;
   top: 0;
-  bottom: 60px;
+  bottom: 80px;
   overflow: hidden;
 }
 
